--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "gary <Gary_Grumbley@intuit.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "concurrently npm:start:*",
+    "start:client": "parcel src/client/index.html",
+    "start:server": "nodemon --exec babel-node src/server/index.js",
     "build": "babel src -d dist --ignore **/*.test.js",
     "clean": "rm -rf dist",
     "start-compiled": "node ./dist/index.js",
@@ -14,13 +16,17 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "phaser": "^3.23.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
-    "nodemon": "^2.0.3"
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.3",
+    "parcel": "^1.12.4"
   }
 }
