--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "version": "echo $npm_package_version"
   },
   "dependencies": {
+    "assets": "^3.0.1",
     "express": "^4.17.1",
     "phaser": "^3.23.0",
     "socket.io": "^2.3.0",
