--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-spread": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3",
