--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-transform-spread": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.8.3"
   }
 }
