--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node ./dist/index.js",
     "dev": "concurrently npm:dev:*",
     "dev:client": "parcel watch src/client/index.html --out-dir dist/client",
-    "dev:server": "nodemon --exec babel-node src/server/index.js",
+    "dev:server": "nodemon --exec babel-node --extensions '.ts,.js' src/server/index.ts",
     "build": "npm run build:client && npm run build:server",
     "build:server": "babel src/server -d dist",
     "build:client": "parcel build src/client/index.html --out-dir dist/client",
