--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@babel/plugin-transform-spread": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/express": "^4.17.6",
+    "@types/node": "^13.13.5",
+    "@types/socket.io": "^2.1.4",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3",
     "parcel-bundler": "^1.12.4",
