--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/index.js",
+    "prestart": "npm run build",
     "dev": "concurrently npm:dev:*",
     "dev:client": "parcel watch src/client/index.html --out-dir dist/client",
     "dev:server": "nodemon --exec babel-node --extensions '.ts,.js' src/server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:server": "babel src/server -d dist",
+    "build:server": "babel src/server -d dist --extensions '.js,.ts'",
     "build:client": "parcel build src/client/index.html --out-dir dist/client",
     "prebuild": "rm -rf dist",
     "version": "echo $npm_package_version"
