--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
     "@types/socket.io": "^2.1.4",
+    "babel-plugin-const-enum": "^1.0.1",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.3",
     "parcel-bundler": "^1.12.4",
