--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build:server": "babel src/server -d dist --extensions '.js,.ts'",
     "build:client": "parcel build src/client/index.html --out-dir dist/client",
     "prebuild": "rm -rf dist",
+    "test": "npm run test:check-types",
+    "test:check-types": "tsc --outDir dist",
     "version": "echo $npm_package_version"
   },
   "dependencies": {
